--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "hello-world-app",
   "version": "1.0.0",
-  "description": "A simple Node.js Hello World application",
+  "description": "A simple Node.js Hello World application with JWT authentication",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js"
   },
-  "keywords": ["nodejs", "hello-world"],
+  "keywords": ["nodejs", "hello-world", "jwt", "express"],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-jwt": "0.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "body-parser": "^1.20.2"
+  }
 }
